--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Magic</string>
     <string name="about">About</string>
+    <string name="home">Home</string>
 </resources>
